fixes #71 and #83, issue is caused by rendering with optimizelegibility
Former-commit-id: 6d402a068a2bf49e534b52d6a54d934eb32989a6
Former-commit-id: 25a5709cf4c0c7133c20c78b2a9ccb95d186ecb3

--- a/node/src/files/stylesheets/semantic.css
+++ b/node/src/files/stylesheets/semantic.css
@@ -49,7 +49,6 @@ body#example {
   margin: 0px;
   padding: 0px;
   color: #555555;
-  text-rendering: optimizeLegibility;
   min-width: 320px;
 }
 body > .content  {
